# OCL-RPF

./: .gitignore  README.md  requirements.txt
messages/spencer_tracking_msgs/: CMakeLists.txt  package.xml
messages/spencer_tracking_msgs/msg/: Box.msg  CompositeDetectedPerson.msg  DetectedPerson.msg  DetectedPerson2d.msg  DetectedPersons2d.msg  TargetPerson.msg  TrackedPerson.msg
messages/visualization/spencer_tracking_rviz_plugin/: CMakeLists.txt  plugin_description.xml
messages/visualization/spencer_tracking_rviz_plugin/src/: additional_topic_subscriber.h  target_person_display.cpp  target_person_display.h
mono_control/launch/: mono_controlling.launch
mono_control/scripts/: control_node.py
mono_following/: CMakeLists.txt
mono_following/launch/: mono_following.launch
mono_following/scripts/mono_following/: descriminator.py  mono_following_node.py  mono_following_node2.py  tracklet.py  utils.py
mono_following/scripts/mono_following/identifiers/: base_identifier.py  part_identifier.py
mono_following/scripts/mono_following/identifiers/states/: initial_state.py  initial_training_state.py  reid_state.py  state.py  tracking_state.py
mono_following/scripts/mono_following/identifiers/track_center/: data_loader.py  part_tracklet.py  relation.py  tracklet.py
mono_following/scripts/mono_following/identifiers/utils/: utils.py
mono_following/scripts/mono_following/reid/: RRClassifier.py
mono_following/scripts/mono_following/reid/descriptor/deep/: model.py
mono_following/scripts/mono_following/track_center/: parsing_tracklet.py  part_tracklet.py
mono_tracking/: CMakeLists.txt  package.xml
mono_tracking/include/kkl/alg/: nearest_neighbor_association.hpp  unscented_kalman_filter.hpp
mono_tracking/include/mono_tracking/: association_distance.hpp  observation.hpp  people_tracker.hpp  person_tracker.hpp  track_system.hpp
mono_tracking/launch/: all_mono_tracking.launch  evaluate_MPF_in_icvs.launch  mono_tracking.launch  robot_frames.launch
mono_tracking/msg/: Person.msg  Persons.msg
mono_tracking/rviz/: mono_tracking.rviz  mono_tracking_ModelOnly.rviz
mono_tracking/scripts/AlphaPose/: detect.py  fn.py
mono_tracking/scripts/AlphaPose/Track/: Tracker.py
mono_tracking/scripts/AlphaPose/YOLOX/: detector.py
mono_tracking/scripts/AlphaPose/YOLOX/demo/OpenVINO/cpp/: CMakeLists.txt
mono_tracking/scripts/AlphaPose/YOLOX/demo/TensorRT/cpp/: CMakeLists.txt
mono_tracking/scripts/debug/: monitor.py
mono_tracking/scripts/debug/logs/: events.out.tfevents.1660793608.jing
mono_tracking/scripts/debug/logs/Target position/X/: events.out.tfevents.1660793634.jing
mono_tracking/scripts/debug/logs/Target position/Y/: events.out.tfevents.1660793634.jing
mono_tracking/scripts/debug/logs/Target velocity/X/: events.out.tfevents.1660793634.jing
mono_tracking/scripts/debug/logs/Target velocity/Y/: events.out.tfevents.1660793634.jing
mono_tracking/scripts/test/: run_experiments.sh
mono_tracking/scripts/tracking/: mono_tracking_node.py
mono_tracking/src/: mono_tracking_node.cpp  people_tracker.cpp  person_tracker.cpp  track_system.cpp
mono_tracking/src/debug/: bag_play.cpp  result.txt
unitree_ros/robots/go1_description/launch/: go1_rviz.launch
unitree_ros/robots/go1_description/urdf/: go1.urdf
unitree_ros/robots/go1_description/xacro/: robot.xacro
unitree_ros/unitree_legged_sdk/: CMakeLists.txt
unitree_ros/unitree_ros_to_real/unitree_legged_real/: CMakeLists.txt
